k8s/overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsp-prod-deployment
  namespace: default
  labels:
    app: dsp-prod
    environment: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dsp-prod
      environment: production
  template:
    metadata:
      labels:
        app: dsp-prod
        environment: production
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: dsp-prod
        image: ghcr.io/themacroeconomicdao/decentralized-social-platform/dsp-prod:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
