k8s/overlays/prod/service.yml
:apiVersion: v1
kind: Service
metadata:
  name: dsp-prod-service
  namespace: default
  labels:
    app: dsp-prod
    environment: production
spec:
  selector:
    app: dsp-prod-primary
    environment: production
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
  type: ClusterIP
